# dify-mcp

./: .editorconfig  .gitignore  .mcp.json  .mise.toml  README.md  dprint.jsonc  lefthook.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
.mise-tasks/: format  install  lint  test  update-git-submodule
.mise-tasks/run/: mcp-inspector
.mise-tasks/run/dify-mcp/: _default  stdio  streamable-http
apps/dify-mcp/: README.md  pyproject.toml
apps/dify-mcp/src/: __main__.py  dsl_schema_info.py  dsl_schemas.py  http_server.py  mcp.py  node_builders.py  schemas.py  validator.py  workflow_manager.py
apps/dify-mcp/tests/: __init__.py
apps/dify-mcp/tests/unit/: __init__.py  test_validator.py
