[project]
name = "dify-mcp"
version = "0.0.0"
description = "MCP server for validating Dify workflow DSL YAML files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastmcp>=2.13.0.1",
  "packaging>=25.0",
  "pyyaml>=6.0.3",
]

[project.scripts]
dify-mcp = "mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "pytest-mock>=3.14.0",
  "types-pyyaml>=6.0.12.20240917",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
exclude = ["tests/"]
