[project]
name = "dify-mcp"
version = "0.0.0"
description = "MCP server for validating Dify workflow DSL YAML files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.14.2",
  "celery~=5.5.2",
  "chardet>=5.2.0",
  "cloudscraper>=1.2.71",
  "Deprecated>=1.2.0",
  "docx>=0.2.4",
  "fastmcp>=2.13.0.1",
  "flask~=3.1.2",
  "flask-login~=0.6.3",
  "flask-orjson~=2.0.0",
  "flask-restx~=1.3.0",
  "flask-sqlalchemy~=3.1.1",
  "gevent~=25.9.1",
  "gmpy2~=2.2.1",
  "httpx>=0.27.0",
  "json-repair>=0.41.1",
  "jwt>=1.4.0",
  "numpy>=2.3.4",
  "openpyxl>=3.1.5",
  "packaging>=25.0",
  "pandas>=2.3.3",
  "pycryptodome==3.19.1",
  "pydantic~=2.11.4",
  "pydantic-extra-types~=2.10.3",
  "pydantic-settings~=2.11.0",
  "pypandoc>=1.15",
  "pypdfium2>=5.0.0",
  "python-docx>=1.2.0",
  "python-dotenv>=1.1.0",
  "pytz>=2025.2",
  "pyyaml>=6.0.3",
  "readabilipy>=0.3.0",
  "redis[hiredis]~=6.1.0",
  "sqlalchemy~=2.0.29",
  "sseclient>=0.0.27",
  "tenacity>=8.0.0",
  "tiktoken~=0.9.0",
  "webvtt-py>=0.5.1",
  "yarl~=1.18.3",
]

[project.scripts]
dify-mcp = "mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "pytest-mock>=3.14.0",
  "types-pyyaml>=6.0.12.20240917",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
files = ["src"]
exclude = ["tests/"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/../../dify/api"

[[tool.mypy.overrides]]
module = "core.*"
follow_imports = "skip"
ignore_errors = true
